Tried shoppingcart without used signin but didn't work

--- a/FeedMe/src/main/webapp/resources/styles/login.css
+++ b/FeedMe/src/main/webapp/resources/styles/login.css
@@ -1,7 +1,8 @@
 @import "bourbon";
 
 html, body {
-	background-image: url(../images/restaurant.jpg);
+	background-image:
+		url("http://www.chewoutloud.com/wp-content/uploads/2013/01/homestyle-chicken-chow-mein-3.jpg");
 	-webkit-background-size: 100% auto;
 	-moz-background-size: 100% auto;
 	-ms-background-size: 100% auto;
@@ -10,6 +11,8 @@ html, body {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
+
 
 .btn {
 	background-color: #F63440;
@@ -26,14 +29,11 @@ html, body {
 	margin: 0 auto;
 	background-color: #fff;
 	border: 1px solid rgba(0, 0, 0, 0.1);
-	.
-	form-signin-heading
-	,
-	.checkbox
-	{
-	margin-bottom
-	:
-	30px;
+	
+}
+
+.form-signin input{
+	color: black;
 }
 
 .checkbox {
@@ -56,8 +56,11 @@ html, body {
 	2;
 }
 
-button:focus{
+button:focus {
 	background-color: white;
+}
+button:hover{
+	background-color: black;
 }
 
 }
