--- a/FeedMe/src/main/webapp/resources/styles/account.css
+++ b/FeedMe/src/main/webapp/resources/styles/account.css
@@ -1,54 +1,77 @@
-    /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-    .row.content {height: 1500px}
-    
-    /* Set gray background color and 100% height */
-    .sidenav {
-      background-color: #f1f1f1;
-      height: 100%;
-    }
-    
-    /* Set black background color, white text and some padding */
-      
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height: auto;}
-    }
-    
-    @import "font-awesome.min.css";
+/* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+.row.content {
+	height: 1500px
+}
+
+/* Set gray background color and 100% height */
+.sidenav {
+	background-color: #f1f1f1;
+	height: 100%;
+}
+
+/* Set black background color, white text and some padding */
+
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+	.sidenav {
+		height: auto;
+		padding: 15px;
+	}
+	.row.content {
+		height: auto;
+	}
+}
+
+@import "font-awesome.min.css";
 
 @import "font-awesome-ie7.min.css";
 /* Space out content a bit */
 body {
-	
-	background-color: #fff;
+	overflow: auto; background-color : #fff;
 	-webkit-background-size: 100% auto;
 	-moz-background-size: 100% auto;
 	-ms-background-size: 100% auto;
 	-o-background-size: 100% auto;
 	background-size: 100% auto;
-	padding-top: 20px;
-
-	margin-top: 60px;
+	padding-top: 100px;
+	background-color: #fff;
 }
 
-.col-sm-1{
+.sider, .thumbnail {
+	padding-top: 20px;
+}
+
+.sider {
+	margin-left: -250px;
+	left: 250px;
+	width: 500px;
+	background: #fff;
+	position: fixed;
+	height: 100%;
+	overflow-y: auto;
+	z-index: 1000;
+	transition: all 0.4s ease 0s;
+}
+
+.col-sm-1 {
 	margin-top: 25px;
+}
+
+.custom {
+	margin-left: 35%;
+	width: 200px !important;
 }
 
 .well, .col-lg-12 {
 	text-align: center;
 }
 
-.table{
-	background-color:#f5f5f5;
+.table {
+	background-color: #f5f5f5;
 }
 
-#balance{
-	color:red;
+#balance {
+	color: red;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -98,7 +121,6 @@ body {
 	font-size: 21px;
 }
 
-
 /* Supporting marketing content */
 .marketing {
 	margin: 40px 0;
@@ -124,9 +146,3 @@ body {
 		border-bottom: 0;
 	}
 }
-
-
-
-
-
-    
