--- a/FeedMe/src/main/webapp/resources/styles/footer.css
+++ b/FeedMe/src/main/webapp/resources/styles/footer.css
@@ -1,66 +1,42 @@
-html {
-  position: relative;
-  min-height: 100%;
+body{background-color: #fff;}
+
+.social-icon {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-body {
-  margin-bottom: 150px;
+.social-icon li{
+  display: inline-block;
+  text-align: center;
+}
+
+.social-icon a {
+  display: block;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.social-icon a {
+  background: rgba(255, 255, 255, 0.85); /* social icon background color */
+  color: #000; /* social icon color */
+}
+
+.social-icon a:hover {
+  background: rgba(255, 255, 255, 0.25); /* social icon hover background color */
+  color: #fff; /* social icon hover color */
 }
 
 .footer {
   position: absolute;
   bottom: 0;
+  padding-top: 5px;
   width: 100%;
-  height: 150px;
-  background-color: #111;
-  text-align: center;
+  height: 60px;
+  background-color: #000;
 }
 
-.container{
-  margin-top: 50px;
-  color: #fff;
-  width: 100%;
-}
 
-.fa-twitter {
-    color: #4099FF;
-}
-
-.fa-facebook {
-    color: #3B5998;
-}
-
-.fa-youtube-play {
-    color: #e52d27;
-}
-
-.fa-rss {
-    color: #FF6600;
-}
-
-.fa-vine {
-    color: #00a478;
-}
-
-.fa-flickr {
-    color: #ff0084;
-}
-
-.fa-twitch {
-    color: #6441A5;
-}
-
-.fa-linkedin {
-    color: #007bb6;
-}
-
-.fa {
-    opacity: 0.7;
-    transition: 1s;
-    -webkit-transition: 1s;
-}
-
-.fa:hover{
-    opacity: 1;
-    transition: 1s;
-    -webkit-transition: 1s;
