--- a/FeedMe/src/main/webapp/resources/styles/header.css
+++ b/FeedMe/src/main/webapp/resources/styles/header.css
@@ -13,9 +13,15 @@
 	color: #fff;
 }
 .navbar {
+	
 	font-size: 20px;
-	background-color: #F63440;
+	background-color: black;
 	box-shadow: 2px 2px 2px white;
+	height:100px;
+}
+
+div ul li a{
+	margin-top: 20px;
 }
 
 
