--- a/FeedMe/src/main/webapp/resources/styles/restaurantList.css
+++ b/FeedMe/src/main/webapp/resources/styles/restaurantList.css
@@ -31,6 +31,7 @@ body{margin-top:50px;
   background-color: #f8f8f9;
   color: #bebec3;
   font-weight: 600;
+  height: 200px;
 }
 .cart-product-imitation {
   text-align: center;
