--- a/FeedMe/src/main/webapp/resources/styles/main.css
+++ b/FeedMe/src/main/webapp/resources/styles/main.css
@@ -11,7 +11,6 @@ html, body {
 	-o-background-size: 100% auto;
 	background-size: 100% auto;
 	margin-left: 5%;
-    
    
 }
 
@@ -116,13 +115,15 @@ html {
     width: 100%;
     height: 100%;
 }
-.title, h1 {
+.title, h1, h4 {
   text-align: center;
   margin-top: 20px;
   padding: 10px;
   text-shadow: 2px 2px #000;
   color: #FFF;
 }
+
+
 
 ------ featurette
 .featurette {
@@ -142,8 +143,8 @@ html {
 
 .featurette .search {
 	padding: 3%;
-	max-width: 980px; max width of search
-	margin: 0 auto;
+	max-width: 980px; max width of search;
+	margin-top: 50px;
 	
 }
 
@@ -165,6 +166,7 @@ html {
 	font-size: 18px;
 	line-height: normal;
 	color: black;
+	
 }
 
 ------ disjointed form group custom
@@ -176,6 +178,11 @@ html {
 }
 
 .form-group button{
+	color: #fff;
+	background-color: #fa0029;; 
+}
+
+.form-group button:active{
 	color: #fff;
 	background-color: #fa0029;; 
 }
