--- a/FeedMe/src/main/webapp/resources/styles/restaurant.css
+++ b/FeedMe/src/main/webapp/resources/styles/restaurant.css
@@ -3,64 +3,71 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    /* padding-left: 40%; */
+	padding-top: 70px;
+	/* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+	/* padding-left: 40%; */
 }
 
-.thumbnail img {
+.thumbnail .imgDiv {
+	background-color: #000;
+}
+
+.thumbnail .imgDiv .restImage {
 	
-    width: 100%;
 }
-
 
 .ratings {
-    padding-right: 10px;
-    padding-left: 10px;
-    color: #d17581;
-    
+	padding-right: 10px;
+	padding-left: 10px;
+	color: #d17581;
 }
 
-.mealImg{
+.mealImg {
 	padding-bottom: 50px;
 }
 
-#hearts { color: #ee8b2d;}
-#hearts-existing { color: #ee8b2d;}
+#hearts {
+	color: #ee8b2d;
+}
+
+#hearts-existing {
+	color: #ee8b2d;
+}
 
 .row .addmeal {
-    color: #fff;
-    background-color: #fa0029;
-    border-color: #fa0029;
+	color: #fff;
+	background-color: #fa0029;
+	border-color: #fa0029;
 }
 
 .row .addmeal:hover {
-    color: #fff;
-    background-color: #fc4029;
-    border-color: #fc4029;
+	color: #fff;
+	background-color: #fc4029;
+	border-color: #fc4029;
 }
 
 ratingDiv .btn {
-    color: #fff;
-    background-color: #f8bd00;
-    border-color: #f8bd00;
+	color: #fff;
+	background-color: #f8bd00;
+	border-color: #f8bd00;
 }
 
 #ratingDiv .btn:hover {
-    color: #fff;
-    background-color: #f9cd00;
-    border-color: #f9cd00;
+	color: #fff;
+	background-color: #f9cd00;
+	border-color: #f9cd00;
 }
 
 .glyphicon-star {
 	color: #f8bd00;
 }
-.glyphicon-star-empty{
+
+.glyphicon-star-empty {
 	color: gray;
 }
 
-.glyphicon-star, .glyphicon-star-empty{
+.glyphicon-star, .glyphicon-star-empty {
 	size: 50px;
 }
 
@@ -69,224 +76,260 @@ ratingDiv .btn {
 	background-color: #352700;
 	border-color: #33527c;
 } */
-
 .thumbnail {
-    padding: 0;
+	padding: 0;
 }
 
-h4 a{
-	color:black;
+h4 a {
+	color: black;
 	font-size: 50px;
 	font-family: fantasy;
 }
 
-p{
+p {
 	font-style: oblique;
-	font-size:105x; 
+	font-size: 105x;
 }
 
 .thumbnail .caption-full {
-    padding: 9px;
-    color: black;
+	padding: 9px;
+	color: black;
+	
 }
 
-.thumbnail .restImage{
-	height:200px;
+.thumbnail .restImage {
+	height: 200px;
 }
 
-.mealNames{
-	width:100px;
-	height:100px;
+.mealNames {
+	width: 100px;
+	height: 100px;
 }
 
-.resName , .hidden-xs{
-	padding-left=0;
+.resName, .hidden-xs {padding-left =0;
 	display: block;
 }
+
 .widget-products li>a:after {
-    content: "\f138";
-    font-family: FontAwesome;
-    font-size: 0.875em;
-    font-style: normal;
-    font-weight: normal;
-    margin-top: 32px;
-    position: absolute;
-    right: 10px;
-    text-decoration: inherit;
-    top: 0;
-    color: #cccccc;
-    font-size: 1.3em;
-}
-.btn-success {
-    background-color: #2ecc71;
-    border-color: #27ae60;
-}
-.btn {
-    border: none;
-    padding: 6px 12px;
-    border-bottom: 4px solid;
-    -webkit-transition: border-color 0.1s ease-in-out 0s,background-color 0.1s ease-in-out 0s;
-    transition: border-color 0.1s ease-in-out 0s,background-color 0.1s ease-in-out 0s;
-    outline: none;
-}
-.checkbox-nice label {
-    padding-top: 3px;
-}
-label {
-    font-weight: 400;
-    font-size: 0.875em;
-}
-.checkbox-nice input[type=checkbox] {
-    visibility: hidden;
-}
-.checkbox-nice {
-    position: relative;
-    padding-left: 15px;
-}
-.widget-todo .name {
-    float: left;
-}
-.widget-todo>li {
-    border-bottom: 1px solid #ebebeb;
-    padding: 10px 5px;
-}
-.widget-todo {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.widget-products li .product>.warranty>i {
-    color: #f1c40f;
-}
-.widget-products li .product>.warranty {
-    display: block;
-    text-decoration: none;
-    width: 50%;
-    float: left;
-    font-size: 0.875em;
-}
-.widget-products li .product>.price>i {
-    color: #2ecc71;
-}
-.widget-products li .product>.price {
-    display: block;
-    text-decoration: none;
-    width: 50%;
-    float: left;
-    font-size: 0.875em;
-}
-.widget-products li .product>.name {
-    display: block;
-    font-weight: 600;
-    padding-bottom: 7px;
-}
-.widget-products li .product {
-    display: block;
-    margin-left: 90px;
-    margin-top: 19px;
-}
-.widget-products li .img {
-    display: block;
-    float: left;
-    text-align: center;
-    width: 70px;
-    height: 68px;
-    overflow: hidden;
-    margin-top: 7px;
-}
-.widget-products li>a {
-    height: 88px;
-    display: block;
-    width: 100%;
-    color: #344644;
-    padding: 3px 10px;
-    position: relative;
-    -webkit-transition: border-color 0.1s ease-in-out 0s,background-color 0.1s ease-in-out 0s;
-    transition: border-color 0.1s ease-in-out 0s,background-color 0.1s ease-in-out 0s;
-}
-.widget-products li {
-    border-bottom: 1px solid #ebebeb;
-}
-.widget-products {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.widget-users li {
-    border-bottom: 1px solid #ebebeb;
-    padding: 15px 0;
-    height: 96px;
-}
-.label {
-    border-radius: 3px;
-    font-size: 0.875em;
-    font-weight: 600;
-}
-.widget-users li>.details>.time {
-    color: #3498db;
-    font-size: 0.75em;
-    padding-bottom: 7px;
-}
-.widget-users li>.details>.name>a {
-    color: #344644;
-}
-.widget-users li>.details>.name {
-    font-weight: 600;
-}
-.widget-users li>.details {
-    margin-left: 60px;
-}
-.widget-users li>.img {
-    float: left;
-    margin-top: 8px;
-    width: 50px;
-    height: 50px;
-    overflow: hidden;
-    border-radius: 50%;
-}
-.widget-users {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.tabs-wrapper.tabs-no-header .tab-content {
-    padding: 0 20px 20px;
-}
-.nav-tabs>li>a {
-    border-radius: 0;
-    font-size: 1.125em;
-    font-weight: 300;
-    outline: none;
-    color: #555;
-    margin-right: 3px;
-}
-.nav>li {
-    float: left;
-}
-.tabs-wrapper .nav-tabs {
-    margin-bottom: 15px;
-}
-.nav-tabs {
-    background: #d0d8de;
-    border-color: transparent;
-    -moz-border-radius: 3px 3px 0 0;
-    -webkit-border-radius: 3px 3px 0 0;
-    border-radius: 3px 3px 0 0;
-}
-.main-box {
-    background: #FFFFFF;
-    -webkit-box-shadow: 1px 1px 2px 0 #CCCCCC;
-    -moz-box-shadow: 1px 1px 2px 0 #CCCCCC;
-    -o-box-shadow: 1px 1px 2px 0 #CCCCCC;
-    -ms-box-shadow: 1px 1px 2px 0 #CCCCCC;
-    box-shadow: 1px 1px 2px 0 #CCCCCC;
-    margin-bottom: 16px;
-    -webikt-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+	content: "\f138";
+	font-family: FontAwesome;
+	font-size: 0.875em;
+	font-style: normal;
+	font-weight: normal;
+	margin-top: 32px;
+	position: absolute;
+	right: 10px;
+	text-decoration: inherit;
+	top: 0;
+	color: #cccccc;
+	font-size: 1.3em;
 }
 
+.btn-success {
+	background-color: #2ecc71;
+	border-color: #27ae60;
+}
+
+.btn {
+	border: none;
+	padding: 6px 12px;
+	border-bottom: 4px solid;
+	-webkit-transition: border-color 0.1s ease-in-out 0s, background-color
+		0.1s ease-in-out 0s;
+	transition: border-color 0.1s ease-in-out 0s, background-color 0.1s
+		ease-in-out 0s;
+	outline: none;
+}
+
+.checkbox-nice label {
+	padding-top: 3px;
+}
+
+label {
+	font-weight: 400;
+	font-size: 0.875em;
+}
+
+.checkbox-nice input[type=checkbox] {
+	visibility: hidden;
+}
+
+.checkbox-nice {
+	position: relative;
+	padding-left: 15px;
+}
+
+.widget-todo .name {
+	float: left;
+}
+
+.widget-todo>li {
+	border-bottom: 1px solid #ebebeb;
+	padding: 10px 5px;
+}
+
+.widget-todo {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.widget-products li .product>.warranty>i {
+	color: #f1c40f;
+}
+
+.widget-products li .product>.warranty {
+	display: block;
+	text-decoration: none;
+	width: 50%;
+	float: left;
+	font-size: 0.875em;
+}
+
+.widget-products li .product>.price>i {
+	color: #2ecc71;
+}
+
+.widget-products li .product>.price {
+	display: block;
+	text-decoration: none;
+	width: 50%;
+	float: left;
+	font-size: 0.875em;
+}
+
+.widget-products li .product>.name {
+	display: block;
+	font-weight: 600;
+	padding-bottom: 7px;
+}
+
+.widget-products li .product {
+	display: block;
+	margin-left: 90px;
+	margin-top: 19px;
+}
+
+.widget-products li .img {
+	display: block;
+	float: left;
+	text-align: center;
+	width: 70px;
+	height: 68px;
+	overflow: hidden;
+	margin-top: 7px;
+}
+
+.widget-products li>a {
+	height: 88px;
+	display: block;
+	width: 100%;
+	color: #344644;
+	padding: 3px 10px;
+	position: relative;
+	-webkit-transition: border-color 0.1s ease-in-out 0s, background-color
+		0.1s ease-in-out 0s;
+	transition: border-color 0.1s ease-in-out 0s, background-color 0.1s
+		ease-in-out 0s;
+}
+
+.widget-products li {
+	border-bottom: 1px solid #ebebeb;
+}
+
+.widget-products {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.widget-users li {
+	border-bottom: 1px solid #ebebeb;
+	padding: 15px 0;
+	height: 96px;
+}
+
+.label {
+	border-radius: 3px;
+	font-size: 0.875em;
+	font-weight: 600;
+}
+
+.widget-users li>.details>.time {
+	color: #3498db;
+	font-size: 0.75em;
+	padding-bottom: 7px;
+}
+
+.widget-users li>.details>.name>a {
+	color: #344644;
+}
+
+.widget-users li>.details>.name {
+	font-weight: 600;
+}
+
+.widget-users li>.details {
+	margin-left: 60px;
+}
+
+.widget-users li>.img {
+	float: left;
+	margin-top: 8px;
+	width: 50px;
+	height: 50px;
+	overflow: hidden;
+	border-radius: 50%;
+}
+
+.widget-users {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.tabs-wrapper.tabs-no-header .tab-content {
+	padding: 0 20px 20px;
+}
+
+.nav-tabs>li>a {
+	border-radius: 0;
+	font-size: 1.125em;
+	font-weight: 300;
+	outline: none;
+	color: #555;
+	margin-right: 3px;
+}
+
+.nav>li {
+	float: left;
+}
+
+.tabs-wrapper .nav-tabs {
+	margin-bottom: 15px;
+}
+
+.nav-tabs {
+	background: #d0d8de;
+	border-color: transparent;
+	-moz-border-radius: 3px 3px 0 0;
+	-webkit-border-radius: 3px 3px 0 0;
+	border-radius: 3px 3px 0 0;
+}
+
+.main-box {
+	background: #FFFFFF;
+	-webkit-box-shadow: 1px 1px 2px 0 #CCCCCC;
+	-moz-box-shadow: 1px 1px 2px 0 #CCCCCC;
+	-o-box-shadow: 1px 1px 2px 0 #CCCCCC;
+	-ms-box-shadow: 1px 1px 2px 0 #CCCCCC;
+	box-shadow: 1px 1px 2px 0 #CCCCCC;
+	margin-bottom: 16px;
+	-webikt-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
 
 footer {
-    margin: 50px 0;
+	margin: 50px 0;
 }
