--- a/FeedMe/src/main/webapp/resources/styles/restaurantList.css
+++ b/FeedMe/src/main/webapp/resources/styles/restaurantList.css
@@ -1,3 +1,34 @@
+a.selected {
+  background-color:#1F75CC;
+  color:white;
+  z-index:100;
+}
+
+.messagepop {
+  background-color:#FFFFFF;
+  border:1px solid #999999;
+  cursor:default;
+  display:none;
+  margin-top: 15px;
+  position:absolute;
+  text-align:left;
+  width:394px;
+  z-index:50;
+  padding: 25px 25px 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 3px;
+  padding-left: 15px;
+  text-indent: -15px;
+}
+
+.messagepop p, .messagepop.div {
+  border-bottom: 1px solid #EFEFEF;
+  margin: 8px 0;
+  padding-bottom: 8px;
+}
 
 body{margin-top:50px;
     background-color:#FF4500;
@@ -13,6 +44,24 @@ body{margin-top:50px;
   padding: 0;
   border: 1px solid #e7eaec;
   
+}
+
+.mapImage{
+	width:50px;
+	height:50px;
+}
+
+.instaImage{
+	margin-top:5px;
+	width:50px;
+	height:50px;
+}
+
+.fbImage{
+	margin-top:5px;
+	margin-left:10px;
+	width:50px;
+	height:50px;
 }
 
 .product-desc h3{
