--- a/FeedMe/src/main/webapp/resources/styles/account.css
+++ b/FeedMe/src/main/webapp/resources/styles/account.css
@@ -53,10 +53,6 @@ body {
 	transition: all 0.4s ease 0s;
 } */
 
-.col-sm-1 {
-	margin-top: 25px;
-}
-
 .custom {
 	margin-left: 35%;
 	width: 200px !important;
@@ -119,6 +115,10 @@ body {
 .jumbotron .btn {
 	padding: 14px 24px;
 	font-size: 21px;
+}
+
+.accountInfo .btn{
+	margin-top: 25px;
 }
 
 /* Supporting marketing content */
